2013-12-16  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.7.0-rc2 Released.

	* AST-2013-006 - app_sms: BufferOverflow when receiving odd length 16
	  bit message

	  This patch prevents an infinite loop overwriting memory when a
	  message is received into the unpacksms16() function, where the length
	  of the message is an odd number of bytes.
	  (closes issue ASTERISK-22590)

	* AST-2013-007 - security: Inhibit execution of privilege escalating
	  functions

	  This patch allows individual dialplan functions to be marked as
	  'dangerous', to inhibit their execution from external sources.

	  A 'dangerous' function is one which results in a privilege
	  escalation. For example, if one were to read the channel variable
	  SHELL(rm -rf /) Bad Things(TM) could happen; even if the external
	  source has only read permissions.

	  Execution from external sources may be enabled by setting
	  'live_dangerously' to 'yes' in the [options] section of
	  asterisk.conf. Although doing so is not recommended.

	  (closes issue ASTERISK-22905)

2013-10-28  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.7.0-rc1 Released.

2013-10-25 23:32 +0000 [r401960-402042]  Scott Griepentrog <sgriepentrog@digium.com>

	* /, include/asterisk/rtp_engine.h, main/rtp_engine.c: rtp_engine:
	  fix rtp payloads copy and improve argument names In function
	  ast_rtp_instance_early _bridge_make_compatible the use of
	  instance 0/1 as arguments doesn't clearly communicate a direction
	  that the copying of payloads from the source channel to the
	  destination channel will occur, making it more probable to have
	  the arguments to ast_rtp_codecs_payloads_copy() put in the
	  reverse order. This patch renames the arguments with _dst and
	  _src suffixes and corrects the copy direction. (closes issue
	  ASTERISK-21464) Reported by: Kevin Stewart Review:
	  https://reviewboard.asterisk.org/r/2894/ ........ Merged
	  revisions 402000 from