@@ -1,1 +1,1 @@
-11.7.0-rc2
+11.7.0
