@@ -1,3 +1,7 @@
+2013-12-17  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 11.7.0 Released.
+
 2013-12-16  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 11.7.0-rc2 Released.
